SERVER-80978 Fix potential deadlock between TTLMonitor::onStepUp and prepared transaction (#17863)

(cherry picked from commit 662c63e868af3fe388ad4d81b14c479b2f5be7f9)

GitOrigin-RevId: 3f108e717fbe7d00caeb67993f695efbf3f95093